fix(corynclub): page overflow due many selections

--- a/css/main.css
+++ b/css/main.css
@@ -240,11 +240,3 @@ input[type=checkbox] {
         height: calc(5rem + 2px);
     }
 }
-
-.single-line {
-    height: calc(1rem + 2px);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    margin: 0 1rem;
-}
